fixed image alignment of grad-img-sm by auto-aligning left/right margins

--- a/css/style.css
+++ b/css/style.css
@@ -115,6 +115,19 @@ body {
 	h5{
 		font-size:16px;
 	}
+
+	.grad-img-sm{
+		display: block;
+		width:150px;
+		height:auto;
+		border-radius: 5%;
+		align-items: center;
+		margin: 0 auto;
+	}
+
+	.grad-img-lg{
+		display: none;
+	}
 }
 
 /*Ipad*/
@@ -133,6 +146,7 @@ body {
 		width:300px;
 		height:auto;
 		border-radius: 5%;
+		margin: 0 auto;
 		display: block;
 	}
 
